--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-postprocessing": "^1.0.0-beta21",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "react-tappable": "^1.0.4",
     "react-three-fiber": "^4.2.8",
     "sass": "^1.26.8",
     "serve": "^11.3.2",
