--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "create-react-class": "^15.6.3",
     "lerp": "^1.0.3",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
